--- a/sites/commencement/main.css
+++ b/sites/commencement/main.css
@@ -1,3 +1,14 @@
 /* Site-specific styles go here */
 
+/**
+ load fonts (fonts hosted remotely + locally)
+ */
 
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600,600italic);
+
+@font-face {
+  font-family: MinionRoman;
+  src: url(fonts/MinionWeb.ttf);
+  font-weight: normal;
+  font-style: normal;
+}
