Change default font to Minion

--- a/sites/commencement/main.css
+++ b/sites/commencement/main.css
@@ -12,3 +12,14 @@
   font-weight: normal;
   font-style: normal;
 }
+
+#slideshow * {
+  font-family: MinionRoman;
+}
+
+
+/* This isn't working (yet) */
+
+.audience #slideshow *[data-role=audience][smil=active] {
+  width: 100%;
+}
