changed stroke & label red to "Brown red" (fixed hex syntax error)

--- a/sites/commencement/main.css
+++ b/sites/commencement/main.css
@@ -41,7 +41,7 @@
 #timeline-count path {
   opacity:1;
   fill:none;
-  stroke: red;
+  stroke: #dd0033;
   stroke-width:60;
   stroke-linecap:butt;
   stroke-linejoin:miter;
@@ -50,7 +50,7 @@
 
 .timeline-label {
   position:absolute;
-  color: red;
+  color: #dd0033;
   font-size: 10em;
   z-index: 200000;
 }
