--- a/sites/commencement/main.css
+++ b/sites/commencement/main.css
@@ -50,10 +50,10 @@
 
 .timeline-label {
   position:absolute;
-  color: #dd0033;
+  color: #edc7b4;
   font-size: 10em;
   z-index: 200000;
   padding: .25em;
-  background-color: #e6dec4;
+  background-color: #4f3528;
   opacity: .6;
 }
