--- a/sites/commencement/main.css
+++ b/sites/commencement/main.css
@@ -79,3 +79,11 @@
   padding: 0 50px 100px 0;
   color: white;
 }
+
+#google-form-1, #google-form-2, #google-form-3, #google-form-4 {
+  width: 100%; 
+  overflow: scroll; 
+  position: absolute; 
+  top: 0;
+  display:none;
+}
