--- a/style/main.css
+++ b/style/main.css
@@ -174,6 +174,12 @@ body.toss > div {
   background-position: center center;
 }
 
+.image-contain {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
 /* Text panel */
 
 .textpanel {
